[package]
name = "ngrammatic"
version = "0.4.1"
authors = ["Will Page <compenguy@gmail.com>"]
description = "Character-oriented ngram generator and fuzzy matching library."
homepage = "https://github.com/compenguy/ngrammatic"
repository = "https://github.com/compenguy/ngrammatic"
documentation = "https://docs.rs/ngrammatic"
readme = "README.md"
categories = ["text-processing"]
keywords = ["fuzzy", "ngrams", "shingles"]
license = "MIT"
edition = "2021"
rust-version = "1.61"

[features]
default = []
trie = ["dep:fast_radix_trie"]
rayon = ["dep:rayon"]

[lib]
name = "ngrammatic"

[dependencies]
fast_radix_trie = { version = "1.1", optional = true }
rayon = { version = "1.11", optional = true }

[package.metadata]
msrv = "1.27.2"
