[package]
name = "ngrammatic"
version = "0.6.0"
authors = ["Will Page <compenguy@gmail.com>"]
description = "Character-oriented ngram generator and fuzzy matching library."
homepage = "https://github.com/compenguy/ngrammatic"
repository = "https://github.com/compenguy/ngrammatic"
documentation = "https://docs.rs/ngrammatic"
readme = "README.md"
categories = ["text-processing"]
keywords = ["fuzzy", "ngrams", "shingles"]
license = "MIT"
edition = "2021"
rust-version = "1.61"

[features]
default = []
rayon = ["dep:rayon"]
serde = ["dep:serde"]

[lib]
name = "ngrammatic"

[dependencies]
string-interner = "0.19"
rayon = { version = "1.11", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.7"

[package.metadata]
msrv = "1.27.2"

[[bench]]
name = "rayon"
harness = false
required-features = ["rayon"]
